impl gap with margin+padding to prevent gap on blank grids

--- a/zotty-web/src/components/ServerListItem.sass
+++ b/zotty-web/src/components/ServerListItem.sass
@@ -2,6 +2,7 @@
 
 .item-container
   border-radius: 20px
+  margin: 0 0 10px 10px
   overflow: hidden
 
 .server-img
@@ -14,6 +15,7 @@
     width: 128px
 
 .name-background
+  @include no-select()
   position: absolute
   display: flex
   justify-content: center
@@ -33,6 +35,7 @@
     transition: all 0.05s ease-out
 
 .name-background-animated
+  @include no-select()
   position: absolute
   display: flex
   justify-content: center
