--- a/zotty-web/src/routes/Servers.sass
+++ b/zotty-web/src/routes/Servers.sass
@@ -11,9 +11,9 @@ div
     @media (max-width: 750px)
       grid-template-columns: max-content max-content
     grid-auto-flow: row
-    gap: 10px
-    padding: 10px
+    padding: 10px 10px 0 0
     
 
 span.text
   color: var(--font-color)
+  margin: 0 0 10px 10px
